apps/safe-settings/deploy/k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: safe-settings
spec:
  selector:
    matchLabels:
      app: safe-settings
  template:
    metadata:
      labels:
        app: safe-settings
    spec:
      containers:
        - name: safe-settings
          image: docker.io/yadhav/safe-settings:1.1.9
          resources:
            requests:
              memory: "128Mi"
              cpu: "10m"
            limits:
              memory: "256Mi"
              cpu: "100m"
