apps/safe-settings/deploy/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: safe-settings
spec:
  selector:
    app: safe-settings
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 3000
